fix: placeholder's z-index

--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -27,6 +27,7 @@
 
   &__placeholder {
     position: absolute;
+    z-index: -1;
     top: .5em;
     left: 1em;
     font-size: 1.5em;
